@@ -12,6 +12,11 @@ What's New in Python 3.1 beta 1?
 Core and Builtins
 -----------------
 
+- Issue #1869 (and many duplicates): make round(x, n) correctly
+  rounded for a float x, by using the decimal <-> binary conversions
+  from Python/dtoa.c.  As a consequence, (e.g.) round(x, 2) now
+  consistently agrees with format(x, '.2f').
+
 - Issue #5772: format(1e100, '<') produces '1e+100', not '1.0e+100'.
 
 - Issue #5515: str.format() type 'n' combined with commas and leading
